# serializer version: 1
# name: test_shelly_1_gen4
  dict({
    'id': 1,
    'method': 'Script.Create',
    'params': dict({
      'name': 'shellies_discovery_gen2_script_20250114',
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_1_gen4.1
  dict({
    'id': 1,
    'method': 'Script.PutCode',
    'params': dict({
      'code': '''
        let topicPrefix = null;
        let updateTimer = null;
        
        function sendDeviceStatus() {
          try {
            let installedVersion = Shelly.getDeviceInfo().ver;
            Shelly.call("Shelly.GetStatus", {}, function (status) {
              status.sys.installed_version = installedVersion;
              MQTT.publish(topicPrefix + "/status/rpc", JSON.stringify(status));
            });
          } catch (e) {
            console.log("sendDeviceStatus has failed: ", e);
          }
        }
        
        function onMQTTConfigReceived(config) {
          topicPrefix = config.topic_prefix;
          console.log("Using topic prefix: ", topicPrefix);
        
          if (!updateTimer) {
            updateTimer = Timer.set(30000, true, sendDeviceStatus);
          }
        }
        
        function initScript() {
          console.log("Starting shellies_discovery_gen2_script");
          try {
            Shelly.call("MQTT.GetConfig", {}, onMQTTConfigReceived);
          } catch (e) {
            console.log("initScript has failed: ", e);
          }
        }
        
        initScript();
  
      ''',
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_1_gen4.10
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'pl': '0_double_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shelly1g4-aabbccddeeff/events/rpc',
    'type': 'button_double_press',
    'val_tpl': '{{value_json.params.events.0.id}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_1_gen4.11
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'pl': '0_long_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shelly1g4-aabbccddeeff/events/rpc',
    'type': 'button_long_press',
    'val_tpl': '{{value_json.params.events.0.id}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_1_gen4.12
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'pl': '0_single_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shelly1g4-aabbccddeeff/events/rpc',
    'type': 'button_short_press',
    'val_tpl': '{{value_json.params.events.0.id}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_1_gen4.13
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'pl': '0_triple_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shelly1g4-aabbccddeeff/events/rpc',
    'type': 'button_triple_press',
    'val_tpl': '{{value_json.params.events.0.id}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_1_gen4.14
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'restart',
    'en': 'true',
    'ent_cat': 'config',
    'name': 'Restart',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_prs': '{"id":1,"src":"home-assistant","method":"Shelly.Reboot"}',
    'qos': 0,
    'uniq_id': 'shelly1g4-aabbccddeeff-restart',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.15
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'firmware',
    'en': 'true',
    'ent_cat': 'config',
    'ent_pic': 'https://brands.home-assistant.io/_/shelly/icon.png',
    'l_ver_t': '~status/rpc',
    'l_ver_tpl': '{%if value_json.sys.available_updates.stable is defined%}{{value_json.sys.available_updates.stable.version}}{%else%}{{value_json.sys.installed_version}}{%endif%}',
    'name': 'Firmware',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_inst': '{"id":1,"src":"home-assistant","method":"Shelly.Update","params":{"stage":"stable"}}',
    'qos': 0,
    'rel_u': 'https://shelly-api-docs.shelly.cloud/gen2/changelog',
    'stat_t': '~status/rpc',
    'tit': 'Shelly 1 Gen4 [DDEEFF] Firmware',
    'uniq_id': 'shelly1g4-aabbccddeeff-firmware',
    'val_tpl': '{{value_json.sys.installed_version}}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.16
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'firmware',
    'en': 'false',
    'ent_cat': 'config',
    'ent_pic': 'https://brands.home-assistant.io/_/shelly/icon.png',
    'l_ver_t': '~status/rpc',
    'l_ver_tpl': '{%if value_json.sys.available_updates.beta is defined%}{{value_json.sys.available_updates.beta.version}}{%else%}{{value_json.sys.installed_version}}{%endif%}',
    'name': 'Firmware beta',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_inst': '{"id":1,"src":"home-assistant","method":"Shelly.Update","params":{"stage":"beta"}}',
    'qos': 0,
    'rel_u': 'https://shelly-api-docs.shelly.cloud/gen2/changelog',
    'stat_t': '~status/rpc',
    'tit': 'Shelly 1 Gen4 [DDEEFF] Firmware',
    'uniq_id': 'shelly1g4-aabbccddeeff-firmware_beta',
    'val_tpl': '{{value_json.sys.installed_version}}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.17
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'timestamp',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Last restart',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shelly1g4-aabbccddeeff-last_restart',
    'val_tpl': '{{(as_timestamp(now())-value_json.sys.uptime)|timestamp_local}}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.18
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'en': 'false',
    'ent_cat': 'diagnostic',
    'icon': 'mdi:wifi-settings',
    'name': 'SSID',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shelly1g4-aabbccddeeff-ssid',
    'val_tpl': '{{value_json.wifi.ssid}}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.19
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'en': 'false',
    'ent_cat': 'diagnostic',
    'icon': 'mdi:ip-outline',
    'name': 'WiFi IP',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shelly1g4-aabbccddeeff-wifi_ip',
    'val_tpl': '{{value_json.wifi.sta_ip}}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.2
  dict({
    'id': 1,
    'method': 'Script.Start',
    'params': dict({
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_1_gen4.20
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'signal_strength',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Signal strength',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/rpc',
    'uniq_id': 'shelly1g4-aabbccddeeff-wifi_signal',
    'unit_of_meas': 'dBm',
    'val_tpl': '{{value_json.wifi.rssi}}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.21
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'connectivity',
    'en': 'false',
    'ent_cat': 'diagnostic',
    'name': 'Cloud',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shelly1g4-aabbccddeeff-cloud',
    'val_tpl': '{%if value_json.cloud.connected%}ON{%else%}OFF{%endif%}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.3
  dict({
    'id': 1,
    'method': 'Script.SetConfig',
    'params': dict({
      'config': dict({
        'enable': True,
      }),
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_1_gen4.4
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_off_tpl': '{"id":1,"src":"home-assistant","method":"Switch.Set","params":{"id":0,"on":false}}',
    'cmd_on_tpl': '{"id":1,"src":"home-assistant","method":"Switch.Set","params":{"id":0,"on":true}}',
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'name': 'Mirror light',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'schema': 'template',
    'stat_t': '~status/switch:0',
    'stat_tpl': '{%if value_json.output%}on{%else%}off{%endif%}',
    'uniq_id': 'shelly1g4-aabbccddeeff-0',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.5
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'temperature',
    'en': 'false',
    'ent_cat': 'diagnostic',
    'name': 'Mirror light Temperature',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/rpc',
    'sug_dsp_prc': 1,
    'uniq_id': 'shelly1g4-aabbccddeeff-0-temperature',
    'unit_of_meas': '°C',
    'val_tpl': '{{value_json["switch:0"].temperature.tC}}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.6
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'problem',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Mirror light Overtemperature',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/switch:0',
    'uniq_id': 'shelly1g4-aabbccddeeff-0-overtemp',
    'val_tpl': '{%if "overtemp" in value_json.get("errors",[])%}ON{%else%}OFF{%endif%}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.7
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'dev_cla': 'button',
    'evt_typ': list([
      'btn_down',
      'btn_up',
      'double_push',
      'long_push',
      'single_push',
      'triple_push',
    ]),
    'name': 'Button 0',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~events/rpc',
    'uniq_id': 'shelly1g4-aabbccddeeff-0',
    'val_tpl': '{%if value_json.params.events.0.id==0%}{{{"event_type":value_json.params.events.0.event}|to_json}}{%endif%}',
    '~': 'shelly1g4-aabbccddeeff/',
  })
# ---
# name: test_shelly_1_gen4.8
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'pl': '0_btn_down',
    'qos': 0,
    'stype': 'button_1',
    't': 'shelly1g4-aabbccddeeff/events/rpc',
    'type': 'button_down',
    'val_tpl': '{{value_json.params.events.0.id}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_1_gen4.9
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shelly1g4-aabbccddeeff.local/',
      'hw': 'gen4',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly 1 Gen4',
      'mdl_id': 'S4SW-001X16EU',
      'mf': 'Shelly',
      'name': 'Shelly 1 Gen4 [DDEEFF]',
      'sw': '20260120-145311/1.7.4-gf9878b6',
    }),
    'pl': '0_btn_up',
    'qos': 0,
    'stype': 'button_1',
    't': 'shelly1g4-aabbccddeeff/events/rpc',
    'type': 'button_up',
    'val_tpl': '{{value_json.params.events.0.id}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'dev_cla': 'signal_strength',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Signal strength',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/bthomedevice:200',
    'uniq_id': 'shellyplugusg4-aabbccddeeff-112233445566-200-signal_strength',
    'unit_of_meas': 'dBm',
    'val_tpl': '{{value_json.rssi}}',
    '~': 'shellyplugusg4-aabbccddeeff/',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.1
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'dev_cla': 'battery',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Battery',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/bthomedevice:200',
    'uniq_id': 'shellyplugusg4-aabbccddeeff-112233445566-200-battery',
    'unit_of_meas': '%',
    'val_tpl': '{{value_json.battery}}',
    '~': 'shellyplugusg4-aabbccddeeff/',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.10
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_1_long_push',
    'qos': 0,
    'stype': 'button_2',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_long_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.11
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_1_triple_push',
    'qos': 0,
    'stype': 'button_2',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_triple_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.12
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'dev_cla': 'button',
    'evt_typ': list([
      'single_push',
      'double_push',
      'long_push',
      'triple_push',
    ]),
    'name': 'Button 2',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~events/rpc',
    'uniq_id': 'shellyplugusg4-aabbccddeeff-112233445566-200-2',
    'val_tpl': '{%if value_json.params.events.0.component=="bthomedevice:200" and value_json.params.events.0.idx is defined and value_json.params.events.0.idx==2 and value_json.params.events.0.event is defined%}{{{"event_type":value_json.params.events.0.event}|to_json}}{%endif%}',
    '~': 'shellyplugusg4-aabbccddeeff/',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.13
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_2_single_push',
    'qos': 0,
    'stype': 'button_3',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_short_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.14
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_2_double_push',
    'qos': 0,
    'stype': 'button_3',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_double_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.15
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_2_long_push',
    'qos': 0,
    'stype': 'button_3',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_long_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.16
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_2_triple_push',
    'qos': 0,
    'stype': 'button_3',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_triple_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.17
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'dev_cla': 'button',
    'evt_typ': list([
      'single_push',
      'double_push',
      'long_push',
      'triple_push',
    ]),
    'name': 'Button 3',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~events/rpc',
    'uniq_id': 'shellyplugusg4-aabbccddeeff-112233445566-200-3',
    'val_tpl': '{%if value_json.params.events.0.component=="bthomedevice:200" and value_json.params.events.0.idx is defined and value_json.params.events.0.idx==3 and value_json.params.events.0.event is defined%}{{{"event_type":value_json.params.events.0.event}|to_json}}{%endif%}',
    '~': 'shellyplugusg4-aabbccddeeff/',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.18
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_3_single_push',
    'qos': 0,
    'stype': 'button_4',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_short_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.19
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_3_double_push',
    'qos': 0,
    'stype': 'button_4',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_double_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.2
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'dev_cla': 'button',
    'evt_typ': list([
      'single_push',
      'double_push',
      'long_push',
      'triple_push',
    ]),
    'name': 'Button 0',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~events/rpc',
    'uniq_id': 'shellyplugusg4-aabbccddeeff-112233445566-200-0',
    'val_tpl': '{%if value_json.params.events.0.component=="bthomedevice:200" and value_json.params.events.0.idx is defined and value_json.params.events.0.idx==0 and value_json.params.events.0.event is defined%}{{{"event_type":value_json.params.events.0.event}|to_json}}{%endif%}',
    '~': 'shellyplugusg4-aabbccddeeff/',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.20
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_3_long_push',
    'qos': 0,
    'stype': 'button_4',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_long_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.21
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_3_triple_push',
    'qos': 0,
    'stype': 'button_4',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_triple_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.3
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_0_single_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_short_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.4
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_0_double_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_double_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.5
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_0_long_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_long_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.6
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_0_triple_push',
    'qos': 0,
    'stype': 'button_1',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_triple_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.7
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'dev_cla': 'button',
    'evt_typ': list([
      'single_push',
      'double_push',
      'long_push',
      'triple_push',
    ]),
    'name': 'Button 1',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~events/rpc',
    'uniq_id': 'shellyplugusg4-aabbccddeeff-112233445566-200-1',
    'val_tpl': '{%if value_json.params.events.0.component=="bthomedevice:200" and value_json.params.events.0.idx is defined and value_json.params.events.0.idx==1 and value_json.params.events.0.event is defined%}{{{"event_type":value_json.params.events.0.event}|to_json}}{%endif%}',
    '~': 'shellyplugusg4-aabbccddeeff/',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.8
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_1_single_push',
    'qos': 0,
    'stype': 'button_2',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_short_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_blu_rc_button_4_zb.9
  dict({
    'atype': 'trigger',
    'dev': dict({
      'cns': list([
        list([
          'bluetooth',
          '11:22:33:44:55:66',
        ]),
      ]),
      'ids': list([
        '11:22:33:44:55:66',
      ]),
      'mdl': 'Shelly BLU RC Button 4 ZB',
      'mdl_id': 'SBBT-104CUS',
      'mf': 'Shelly',
      'name': 'FourButtonSwitch',
      'via_device': 'aa:bb:cc:dd:ee:ff',
    }),
    'pl': 'bthomedevice:200_1_double_push',
    'qos': 0,
    'stype': 'button_2',
    't': 'shellyplugusg4-aabbccddeeff/events/rpc',
    'type': 'button_double_press',
    'val_tpl': '{{value_json.params.events.0.component}}_{{value_json.params.events.0.idx}}_{{value_json.params.events.0.event}}',
  })
# ---
# name: test_shelly_plug_m_gen3
  dict({
    'id': 1,
    'method': 'Script.Create',
    'params': dict({
      'name': 'shellies_discovery_gen2_script_20250114',
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_m_gen3.1
  dict({
    'id': 1,
    'method': 'Script.PutCode',
    'params': dict({
      'code': '''
        let topicPrefix = null;
        let updateTimer = null;
        
        function sendDeviceStatus() {
          try {
            let installedVersion = Shelly.getDeviceInfo().ver;
            Shelly.call("Shelly.GetStatus", {}, function (status) {
              status.sys.installed_version = installedVersion;
              MQTT.publish(topicPrefix + "/status/rpc", JSON.stringify(status));
            });
          } catch (e) {
            console.log("sendDeviceStatus has failed: ", e);
          }
        }
        
        function onMQTTConfigReceived(config) {
          topicPrefix = config.topic_prefix;
          console.log("Using topic prefix: ", topicPrefix);
        
          if (!updateTimer) {
            updateTimer = Timer.set(30000, true, sendDeviceStatus);
          }
        }
        
        function initScript() {
          console.log("Starting shellies_discovery_gen2_script");
          try {
            Shelly.call("MQTT.GetConfig", {}, onMQTTConfigReceived);
          } catch (e) {
            console.log("initScript has failed: ", e);
          }
        }
        
        initScript();
  
      ''',
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_m_gen3.10
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'temperature',
    'en': 'false',
    'ent_cat': 'diagnostic',
    'name': 'Relay 0 Temperature',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/switch:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-temperature',
    'unit_of_meas': '°C',
    'val_tpl': '{{value_json.temperature.tC}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.11
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'voltage',
    'en': 'false',
    'name': 'Relay 0 Voltage',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/switch:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-voltage',
    'unit_of_meas': 'V',
    'val_tpl': '{{value_json.voltage}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.12
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'problem',
    'en': 'false',
    'ent_cat': 'diagnostic',
    'name': 'Relay 0 Overpower',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/switch:0',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-overpower',
    'val_tpl': '{%if "overpower" in value_json.get("errors",[])%}ON{%else%}OFF{%endif%}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.13
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'problem',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Relay 0 Overtemperature',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/switch:0',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-overtemp',
    'val_tpl': '{%if "overtemp" in value_json.get("errors",[])%}ON{%else%}OFF{%endif%}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.14
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'problem',
    'en': 'false',
    'ent_cat': 'diagnostic',
    'name': 'Relay 0 Overvoltage',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/switch:0',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-overvoltage',
    'val_tpl': '{%if "overvoltage" in value_json.get("errors",[])%}ON{%else%}OFF{%endif%}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.15
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'restart',
    'en': 'true',
    'ent_cat': 'config',
    'name': 'Restart',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_prs': '{"id":1,"src":"home-assistant","method":"Shelly.Reboot"}',
    'qos': 0,
    'uniq_id': 'shellyplugmg3-aabbccddeeff-restart',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.16
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'firmware',
    'en': 'true',
    'ent_cat': 'config',
    'ent_pic': 'https://brands.home-assistant.io/_/shelly/icon.png',
    'l_ver_t': '~status/rpc',
    'l_ver_tpl': '{%if value_json.sys.available_updates.stable is defined%}{{value_json.sys.available_updates.stable.version}}{%else%}{{value_json.sys.installed_version}}{%endif%}',
    'name': 'Firmware',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_inst': '{"id":1,"src":"home-assistant","method":"Shelly.Update","params":{"stage":"stable"}}',
    'qos': 0,
    'rel_u': 'https://shelly-api-docs.shelly.cloud/gen2/changelog',
    'stat_t': '~status/rpc',
    'tit': 'Shelly Plug M Gen3 [DDEEFF] Firmware',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-firmware',
    'val_tpl': '{{value_json.sys.installed_version}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.17
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'firmware',
    'en': 'false',
    'ent_cat': 'config',
    'ent_pic': 'https://brands.home-assistant.io/_/shelly/icon.png',
    'l_ver_t': '~status/rpc',
    'l_ver_tpl': '{%if value_json.sys.available_updates.beta is defined%}{{value_json.sys.available_updates.beta.version}}{%else%}{{value_json.sys.installed_version}}{%endif%}',
    'name': 'Firmware beta',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_inst': '{"id":1,"src":"home-assistant","method":"Shelly.Update","params":{"stage":"beta"}}',
    'qos': 0,
    'rel_u': 'https://shelly-api-docs.shelly.cloud/gen2/changelog',
    'stat_t': '~status/rpc',
    'tit': 'Shelly Plug M Gen3 [DDEEFF] Firmware',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-firmware_beta',
    'val_tpl': '{{value_json.sys.installed_version}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.18
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'timestamp',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Last restart',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-last_restart',
    'val_tpl': '{{(as_timestamp(now())-value_json.sys.uptime)|timestamp_local}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.19
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'en': 'false',
    'ent_cat': 'diagnostic',
    'icon': 'mdi:wifi-settings',
    'name': 'SSID',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-ssid',
    'val_tpl': '{{value_json.wifi.ssid}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.2
  dict({
    'id': 1,
    'method': 'Script.Start',
    'params': dict({
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_m_gen3.20
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'en': 'false',
    'ent_cat': 'diagnostic',
    'icon': 'mdi:ip-outline',
    'name': 'WiFi IP',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-wifi_ip',
    'val_tpl': '{{value_json.wifi.sta_ip}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.21
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'signal_strength',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Signal strength',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-wifi_signal',
    'unit_of_meas': 'dBm',
    'val_tpl': '{{value_json.wifi.rssi}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.22
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'connectivity',
    'en': 'false',
    'ent_cat': 'diagnostic',
    'name': 'Cloud',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-cloud',
    'val_tpl': '{%if value_json.cloud.connected%}ON{%else%}OFF{%endif%}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.3
  dict({
    'id': 1,
    'method': 'Script.SetConfig',
    'params': dict({
      'config': dict({
        'enable': True,
      }),
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_m_gen3.4
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'name': 'Relay 0',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_off': '{"id":1,"src":"home-assistant","method":"Switch.Set","params":{"id":0,"on":false}}',
    'pl_on': '{"id":1,"src":"home-assistant","method":"Switch.Set","params":{"id":0,"on":true}}',
    'qos': 0,
    'stat_off': 'off',
    'stat_on': 'on',
    'stat_t': '~status/switch:0',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0',
    'val_tpl': '{%if value_json.output%}on{%else%}off{%endif%}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.5
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'current',
    'en': 'false',
    'name': 'Relay 0 Current',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/switch:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-current',
    'unit_of_meas': 'A',
    'val_tpl': '{{value_json.current}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.6
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'energy',
    'en': 'true',
    'name': 'Relay 0 Energy',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'total_increasing',
    'stat_t': '~status/switch:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-energy',
    'unit_of_meas': 'Wh',
    'val_tpl': '{{value_json.aenergy.total}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.7
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'frequency',
    'en': 'false',
    'name': 'Relay 0 Frequency',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/switch:0',
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-frequency',
    'unit_of_meas': 'Hz',
    'val_tpl': '{{value_json.freq}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.8
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'power',
    'en': 'true',
    'name': 'Relay 0 Power',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/switch:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-power',
    'unit_of_meas': 'W',
    'val_tpl': '{{value_json.apower}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_m_gen3.9
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug M Gen3',
      'mdl_id': 'S3PL-30110EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug M Gen3 [DDEEFF]',
      'sw': '20260120-145242/1.7.4-gf9878b6',
    }),
    'dev_cla': 'energy',
    'en': 'false',
    'name': 'Relay 0 Returned energy',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'total_increasing',
    'stat_t': '~status/switch:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugmg3-aabbccddeeff-0-returned_energy',
    'unit_of_meas': 'Wh',
    'val_tpl': '{{value_json.ret_aenergy.total}}',
    '~': 'shellyplugmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3
  dict({
    'id': 1,
    'method': 'Script.Create',
    'params': dict({
      'name': 'shellies_discovery_gen2_script_20250114',
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_pm_gen3.1
  dict({
    'id': 1,
    'method': 'Script.PutCode',
    'params': dict({
      'code': '''
        let topicPrefix = null;
        let updateTimer = null;
        
        function sendDeviceStatus() {
          try {
            let installedVersion = Shelly.getDeviceInfo().ver;
            Shelly.call("Shelly.GetStatus", {}, function (status) {
              status.sys.installed_version = installedVersion;
              MQTT.publish(topicPrefix + "/status/rpc", JSON.stringify(status));
            });
          } catch (e) {
            console.log("sendDeviceStatus has failed: ", e);
          }
        }
        
        function onMQTTConfigReceived(config) {
          topicPrefix = config.topic_prefix;
          console.log("Using topic prefix: ", topicPrefix);
        
          if (!updateTimer) {
            updateTimer = Timer.set(30000, true, sendDeviceStatus);
          }
        }
        
        function initScript() {
          console.log("Starting shellies_discovery_gen2_script");
          try {
            Shelly.call("MQTT.GetConfig", {}, onMQTTConfigReceived);
          } catch (e) {
            console.log("initScript has failed: ", e);
          }
        }
        
        initScript();
  
      ''',
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_pm_gen3.10
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'power',
    'en': 'true',
    'name': 'Power',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/pm1:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-power',
    'unit_of_meas': 'W',
    'val_tpl': '{{value_json.apower}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.11
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'energy',
    'en': 'false',
    'name': 'Total active returned energy',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'total_increasing',
    'stat_t': '~status/pm1:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-returned_energy',
    'unit_of_meas': 'Wh',
    'val_tpl': '{{value_json.ret_aenergy.total}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.12
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'en': 'false',
    'ent_cat': 'diagnostic',
    'icon': 'mdi:wifi-settings',
    'name': 'SSID',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-ssid',
    'val_tpl': '{{value_json.wifi.ssid}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.13
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'voltage',
    'en': 'false',
    'name': 'Voltage',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/pm1:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-voltage',
    'unit_of_meas': 'V',
    'val_tpl': '{{value_json.voltage}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.14
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'en': 'false',
    'ent_cat': 'diagnostic',
    'icon': 'mdi:ip-outline',
    'name': 'WiFi IP',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-wifi_ip',
    'val_tpl': '{{value_json.wifi.sta_ip}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.15
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'signal_strength',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Signal strength',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-wifi_signal',
    'unit_of_meas': 'dBm',
    'val_tpl': '{{value_json.wifi.rssi}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.16
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'connectivity',
    'en': 'false',
    'ent_cat': 'diagnostic',
    'name': 'Cloud',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-cloud',
    'val_tpl': '{%if value_json.cloud.connected%}ON{%else%}OFF{%endif%}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.2
  dict({
    'id': 1,
    'method': 'Script.Start',
    'params': dict({
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_pm_gen3.3
  dict({
    'id': 1,
    'method': 'Script.SetConfig',
    'params': dict({
      'config': dict({
        'enable': True,
      }),
      'id': 1,
    }),
    'src': 'shellies_discovery_script',
  })
# ---
# name: test_shelly_plug_pm_gen3.4
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'restart',
    'en': 'true',
    'ent_cat': 'config',
    'name': 'Restart',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_prs': '{"id":1,"src":"home-assistant","method":"Shelly.Reboot"}',
    'qos': 0,
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-restart',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.5
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'firmware',
    'en': 'true',
    'ent_cat': 'config',
    'ent_pic': 'https://brands.home-assistant.io/_/shelly/icon.png',
    'l_ver_t': '~status/rpc',
    'l_ver_tpl': '{%if value_json.sys.available_updates.stable is defined%}{{value_json.sys.available_updates.stable.version}}{%else%}{{value_json.sys.installed_version}}{%endif%}',
    'name': 'Firmware',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_inst': '{"id":1,"src":"home-assistant","method":"Shelly.Update","params":{"stage":"stable"}}',
    'qos': 0,
    'rel_u': 'https://shelly-api-docs.shelly.cloud/gen2/changelog',
    'stat_t': '~status/rpc',
    'tit': 'Shelly Plug PM [DDEEFF] Firmware',
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-firmware',
    'val_tpl': '{{value_json.sys.installed_version}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.6
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'cmd_t': '~rpc',
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'firmware',
    'en': 'false',
    'ent_cat': 'config',
    'ent_pic': 'https://brands.home-assistant.io/_/shelly/icon.png',
    'l_ver_t': '~status/rpc',
    'l_ver_tpl': '{%if value_json.sys.available_updates.beta is defined%}{{value_json.sys.available_updates.beta.version}}{%else%}{{value_json.sys.installed_version}}{%endif%}',
    'name': 'Firmware beta',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'pl_inst': '{"id":1,"src":"home-assistant","method":"Shelly.Update","params":{"stage":"beta"}}',
    'qos': 0,
    'rel_u': 'https://shelly-api-docs.shelly.cloud/gen2/changelog',
    'stat_t': '~status/rpc',
    'tit': 'Shelly Plug PM [DDEEFF] Firmware',
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-firmware_beta',
    'val_tpl': '{{value_json.sys.installed_version}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.7
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'current',
    'en': 'false',
    'name': 'Current',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'measurement',
    'stat_t': '~status/pm1:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-current',
    'unit_of_meas': 'A',
    'val_tpl': '{{value_json.current}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.8
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'energy',
    'en': 'true',
    'name': 'Energy',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_cla': 'total_increasing',
    'stat_t': '~status/pm1:0',
    'sug_dsp_prc': 1,
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-energy',
    'unit_of_meas': 'Wh',
    'val_tpl': '{{value_json.aenergy.total}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
# name: test_shelly_plug_pm_gen3.9
  dict({
    'avty': list([
      dict({
        'pl_avail': 'true',
        'pl_not_avail': 'false',
        't': '~online',
      }),
      dict({
        't': '~status/rpc',
        'val_tpl': '{%if value_json.mqtt.connected%}online{%else%}offline{%endif%}',
      }),
    ]),
    'dev': dict({
      'cns': list([
        list([
          'mac',
          'aa:bb:cc:dd:ee:ff',
        ]),
      ]),
      'cu': 'http://shellyplugpmg3-aabbccddeeff.local/',
      'hw': 'gen3',
      'ids': list([
        'aa:bb:cc:dd:ee:ff',
      ]),
      'mdl': 'Shelly Plug PM Gen3',
      'mdl_id': 'S3PL-30116EU',
      'mf': 'Shelly',
      'name': 'Shelly Plug PM [DDEEFF]',
      'sw': '20250924-062728/1.7.1-gd336f31',
    }),
    'dev_cla': 'timestamp',
    'en': 'true',
    'ent_cat': 'diagnostic',
    'name': 'Last restart',
    'o': dict({
      'name': 'Shellies Discovery Gen2',
      'sw': '0.0.0',
      'url': 'https://github.com/bieniu/ha-shellies-discovery-gen2',
    }),
    'qos': 0,
    'stat_t': '~status/rpc',
    'uniq_id': 'shellyplugpmg3-aabbccddeeff-last_restart',
    'val_tpl': '{{(as_timestamp(now())-value_json.sys.uptime)|timestamp_local}}',
    '~': 'shellyplugpmg3-aabbccddeeff/',
  })
# ---
